--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                               <td>Dr. Lukman, M.Hum.</td>
                               <td>Prof. Drs. Anang Wahid M Diah, M.Si., Ph.D</td>
                               <td>Intje Safira Dahlan</td>
-                              <td>Inggrid Widyasari Legarano</td>
+                              <td>Inggrid Widyasari Legarano, S.Ak.</td>
                           </tr>
                           <tr>
                               <td><img src="./ttd lukman+cap.png" class="ttd-cap rounded mx-auto d-block" alt="..."></td>
@@ -140,7 +140,7 @@
                                 <td>Dr. Lukman, M.Hum.</td>
                                 <td>Prof. Drs. Anang Wahid M Diah, M.Si., Ph.D</td>
                                 <td>Intje Safira Dahlan</td>
-                                <td>Inggrid Widyasari Legarano</td>
+                                <td>Inggrid Widyasari Legarano, S.Ak.</td>
                             </tr>
                             <tr>
                                 <td><img src="./ttd lukman+cap.png" class="ttd-cap rounded mx-auto d-block" alt="..."></td>
