update size ttd

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                           <tr>
                               <td><img src="./ttd lukman+cap.png" class="ttd-cap rounded mx-auto d-block" alt="..."></td>
                               <td><img src="./ttd prof anang.png" class="ttd rounded mx-auto d-block" alt="..."></td>
-                              <td><img src="./intje.png" class="ttd rounded mx-auto d-block" alt="..."></td>
-                              <td><img src="./inggrid.png" class="ttd rounded mx-auto d-block" alt="..."></td>
+                              <td><img src="./intje.png" class="ttd2 rounded mx-auto d-block" alt="..."></td>
+                              <td><img src="./inggrid.png" class="ttd2 rounded mx-auto d-block" alt="..."></td>
                               
                           </tr>
                           <tr>
@@ -142,8 +142,8 @@
                             <tr>
                                 <td><img src="./ttd lukman+cap.png" class="ttd-cap rounded mx-auto d-block" alt="..."></td>
                                 <td><img src="./ttd prof anang.png" class="ttd rounded mx-auto d-block" alt="..."></td>
-                                <td><img src="./intje.png" class="ttd rounded mx-auto d-block" alt="..."></td>
-                                <td><img src="./inggrid.png" class="ttd rounded mx-auto d-block" alt="..."></td>
+                                <td><img src="./intje.png" class="ttd2 rounded mx-auto d-block" alt="..."></td>
+                                <td><img src="./inggrid.png" class="ttd2 rounded mx-auto d-block" alt="..."></td>
                                 
                             </tr>
                             <tr>
