--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <tr>
                                 <th>Kepala LPPM</th>
                                 <th>Kepala Pusat MBKM</th>
-                                <th>Ketua DKM 2025</th>
+                                <th>Ketua DKB 2025</th>
                                 <th>Ketua Instruktur</th>
                             </tr>
                         </thead>
